@@ -61,7 +61,7 @@ public class WebTest {
     public void doTest() throws Exception {
         String url = "http://" + host + ":" + port + contextRoot + "/From";
         HttpURLConnection conn = (HttpURLConnection)
-            (new URL(url)).openConnection();
+            URI.create(url).toURL().openConnection();
 
         int code = conn.getResponseCode();
         if (code != 200) {
