@@ -68,8 +68,8 @@ public class WebTest {
 
     public void doTest() throws Exception {
 
-        URL url = new URL("http://" + host  + ":" + port
-                          + contextRoot + "/application/redirect/xxx");
+        URL url = URI.create("http://" + host  + ":" + port
+                          + contextRoot + "/application/redirect/xxx").toURL();
         System.out.println("Connecting to: " + url.toString());
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
